// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GraphCardHelpers generateChartIds should return consistent IDs: base id 1`] = `"lorem_ipsum"`;

exports[`GraphCardHelpers generateChartIds should return consistent IDs: category id 1`] = `"lorem_dolor-sir_ipsum"`;

exports[`GraphCardHelpers generateChartIds should return consistent IDs: threshold, capacity id 1`] = `"threshold_lorem_ipsum"`;

exports[`GraphCardHelpers generateChartSettings should return base graph settings: basic filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "dolor": "sit",
        "groupMetric": [
          "dolorSit",
        ],
        "isMetricDisplay": false,
        "isMultiMetric": false,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "area",
            "dolor": "sit",
            "id": "dolorSit_loremIpsumTest",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "dolorSit",
            "strokeWidth": 2,
          },
        ],
        "productId": "loremIpsumTest",
        "stringId": "dolorSit_loremIpsumTest",
      },
    },
  ],
}
`;

exports[`GraphCardHelpers generateChartSettings should return base graph settings: no filters 1`] = `
{
  "filtersSettings": [],
}
`;

exports[`GraphCardHelpers generateExtendedChartSettings should return extended graph settings: basic settings 1`] = `
{
  "lorem": "ipsum",
  "xAxisLabelIncrement": 5,
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers generateExtendedChartSettings should return extended graph settings: no settings 1`] = `
{
  "xAxisLabelIncrement": 1,
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers generateIsToolbarFilter should return a consistent check: is NOT a toolbar filter 1`] = `false`;

exports[`GraphCardHelpers generateIsToolbarFilter should return a consistent check: is toolbar filter 1`] = `true`;

exports[`GraphCardHelpers getChartXAxisLabelIncrement should return a x axis tick increment based on granularity: x axis tick increment 1`] = `
{
  "daily": 5,
  "monthly": 2,
  "quarterly": 1,
  "weekly": 2,
}
`;

exports[`GraphCardHelpers getDailyMonthlyTotals should return total values: base 1`] = `
{
  "dailyDate": "2023-06-13T00:00:00.000Z",
  "dailyHasData": false,
  "dailyValue": 0,
  "monthlyDate": "2023-06-13T00:00:00.000Z",
  "monthlyHasData": true,
  "monthlyValue": 100,
}
`;

exports[`GraphCardHelpers getPrepaidTallyCapacity should return tally, capacity dataSets: base 1`] = `
{
  "capacityData": "mock threshold data",
  "tallyData": "mock area chart data",
}
`;

exports[`GraphCardHelpers getRemainingCapacity should return capacity values: base 1`] = `
{
  "remainingCapacity": 50,
  "remainingCapacityHasData": true,
}
`;

exports[`GraphCardHelpers getRemainingCapacity should return capacity values: fallback 1`] = `
{
  "remainingCapacity": 0,
  "remainingCapacityHasData": true,
}
`;

exports[`GraphCardHelpers getRemainingOverage should return overage values: base 1`] = `
{
  "remainingOverage": 50,
  "remainingOverageHasData": true,
}
`;

exports[`GraphCardHelpers getRemainingOverage should return overage values: fallback 1`] = `
{
  "remainingOverage": 0,
  "remainingOverageHasData": true,
}
`;

exports[`GraphCardHelpers getTooltipDate should return a formatted date based on granularity: granularity based date 1`] = `
{
  "daily": "June 1",
  "monthly": "June 2019",
  "quarterly": "Jun 2019 - Sep 2019",
  "weekly": "Jun 1 - Jun 8 2019",
}
`;

exports[`GraphCardHelpers should have specific functions: graphCardHelpers 1`] = `
{
  "generateChartIds": [Function],
  "generateChartSettings": [Function],
  "generateExtendedChartSettings": [Function],
  "generateIsToolbarFilter": [Function],
  "getChartXAxisLabelIncrement": [Function],
  "getDailyMonthlyTotals": [Function],
  "getMetricTotalCurrentOrLastData": [Function],
  "getPrepaidTallyCapacity": [Function],
  "getRemainingCapacity": [Function],
  "getRemainingOverage": [Function],
  "getTooltipDate": [Function],
  "xAxisTickFormat": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`GraphCardHelpers xAxisTickFormat should produce consistent x axis tick values: x axis should be undefined if date or granularity are missing 1`] = `
{
  "missingDate": undefined,
  "missingGranularity": undefined,
}
`;

exports[`GraphCardHelpers xAxisTickFormat should produce consistent x axis tick values: x axis tick values 1`] = `
{
  "daily": [
    "Jun 20",
    "Jun 21",
    "Jun 22",
    "Jun 23",
    "Jun 24",
    "Jun 25",
    "Jun 26",
    "Jun 27",
    "Jun 28",
    "Jun 29",
    "Jun 30",
    "Jul 1",
    "Jul 2",
    "Jul 3",
    "Jul 4",
    "Jul 5",
    "Jul 6",
    "Jul 7",
    "Jul 8",
    "Jul 9",
    "Jul 10",
    "Jul 11",
    "Jul 12",
    "Jul 13",
    "Jul 14",
    "Jul 15",
    "Jul 16",
    "Jul 17",
    "Jul 18",
    "Jul 19",
    "Jul 20",
  ],
  "monthly": [
    "Jul",
    "Aug",
    "Sep",
    "Oct",
    "Nov",
    "Dec",
    "Jan
2019",
    "Feb",
    "Mar",
    "Apr",
    "May",
    "Jun",
    "Jul",
  ],
  "quarterly": [
    "Jul",
    "Oct",
    "Jan
2015",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2016",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2017",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2018",
    "Apr",
    "Jul",
    "Oct",
    "Jan
2019",
    "Apr",
    "Jul",
  ],
  "quarterlySmallGraph": [
    "Jul
2014",
    "Oct
2014",
    "Jan
2015",
    "Apr
2015",
    "Jul
2015",
    "Oct
2015",
    "Jan
2016",
    "Apr
2016",
    "Jul
2016",
    "Oct
2016",
    "Jan
2017",
    "Apr
2017",
    "Jul
2017",
    "Oct
2017",
    "Jan
2018",
    "Apr
2018",
    "Jul
2018",
    "Oct
2018",
    "Jan
2019",
    "Apr
2019",
    "Jul
2019",
  ],
  "weekly": [
    "Apr 21",
    "Apr 28",
    "May 5",
    "May 12",
    "May 19",
    "May 26",
    "Jun 2",
    "Jun 9",
    "Jun 16",
    "Jun 23",
    "Jun 30",
    "Jul 7",
    "Jul 14",
  ],
}
`;

exports[`GraphCardHelpers yAxisTickFormat should produce consistent y axis tick values: y axis tick values 1`] = `
{
  "0.00001345": "0",
  "0.0000269": "0",
  "0.00004035": "0",
  "0.0000538": "0",
  "0.00006725": "0",
  "0.0000807": "0",
  "0.00009415": "0",
  "0.0001076": "0",
  "0.00012105": "0",
  "0.0001345": "0",
  "0.00014795": "0",
  "0.0001614": "0",
  "0.00017485": "0",
  "0.0001883": "0",
  "0.00020175": "0",
  "10.0003097025": "10",
  "100.003097025": "100",
  "1000.03097025": "1K",
  "10000.3097025": "10K",
  "100003.097025": "100K",
  "1000030.97025": "1M",
  "10000309.7025": "10M",
  "100003097.025": "100M",
  "1000030970.25": "1B",
  "10000309702.5": "10B",
  "100003097025": "100B",
  "1000030970250": "1T",
  "10000309702500": "10T",
  "110.003406727": "110",
  "1100.03406727": "1.1K",
  "11000.3406727": "11K",
  "110003.406727": "110K",
  "1100034.06727": "1.1M",
  "11000340.6727": "11M",
  "110003406.727": "110M",
  "1100034067.27": "1.1B",
  "11000340672.7": "11B",
  "110003406727": "110B",
  "1100034067270": "1.1T",
  "11000340672700": "11T",
  "120.00371643": "120",
  "1200.0371643": "1.2K",
  "12000.371643": "12K",
  "120003.71643": "120K",
  "1200037.1643": "1.2M",
  "12000371.643": "12M",
  "120003716.43": "120M",
  "1200037164.3": "1.2B",
  "12000371643": "12B",
  "120003716430": "120B",
  "1200037164300": "1.2T",
  "12000371643000": "12T",
  "130.004026132": "130",
  "1300.04026132": "1.3K",
  "13000.4026132": "13K",
  "130004.026132": "130K",
  "1300040.26132": "1.3M",
  "13000402.6132": "13M",
  "130004026.132": "130M",
  "1300040261.32": "1.3B",
  "13000402613.2": "13B",
  "130004026132": "130B",
  "1300040261320": "1.3T",
  "13000402613200": "13T",
  "140.004335835": "140",
  "1400.04335835": "1.4K",
  "14000.4335835": "14K",
  "140004.335835": "140K",
  "1400043.35835": "1.4M",
  "14000433.5835": "14M",
  "140004335.835": "140M",
  "1400043358.35": "1.4B",
  "14000433583.5": "14B",
  "140004335835": "140B",
  "1400043358350": "1.4T",
  "14000433583500": "14T",
  "150.004645537": "150",
  "1500.04645537": "1.5K",
  "15000.4645537": "15K",
  "150004.645537": "150K",
  "1500046.45537": "1.5M",
  "15000464.5537": "15M",
  "150004645.537": "150M",
  "1500046455.37": "1.5B",
  "15000464553.7": "15B",
  "150004645537": "150B",
  "1500046455370": "1.5T",
  "15000464553700": "15T",
  "20.000619405": "20",
  "200.00619405": "200",
  "2000.0619405": "2K",
  "20000.619405": "20K",
  "200006.19405": "200K",
  "2000061.9405": "2M",
  "20000619.405": "20M",
  "200006194.05": "200M",
  "2000061940.5": "2B",
  "20000619405": "20B",
  "200006194050": "200B",
  "2000061940500": "2T",
  "30.0009291075": "30",
  "300.009291075": "300",
  "3000.09291075": "3K",
  "30000.9291075": "30K",
  "300009.291075": "300K",
  "3000092.91075": "3M",
  "30000929.1075": "30M",
  "300009291.075": "300M",
  "3000092910.75": "3B",
  "30000929107.5": "30B",
  "300009291075": "300B",
  "3000092910750": "3T",
  "40.00123881": "40",
  "400.0123881": "400",
  "4000.123881": "4K",
  "40001.23881": "40K",
  "400012.3881": "400K",
  "4000123.881": "4M",
  "40001238.81": "40M",
  "400012388.1": "400M",
  "4000123881": "4B",
  "40001238810": "40B",
  "400012388100": "400B",
  "4000123881000": "4T",
  "50.0015485125": "50",
  "500.015485125": "500",
  "5000.15485125": "5K",
  "50001.5485125": "50K",
  "500015.485125": "500K",
  "5000154.85125": "5M",
  "50001548.5125": "50M",
  "500015485.125": "500M",
  "5000154851.25": "5B",
  "50001548512.5": "50B",
  "500015485125": "500B",
  "5000154851250": "5T",
  "60.0018582149": "60",
  "600.018582149": "600",
  "6000.18582149": "6K",
  "60001.8582149": "60K",
  "600018.582149": "600K",
  "6000185.82149": "6M",
  "60001858.2149": "60M",
  "600018582.149": "600M",
  "6000185821.49": "6B",
  "60001858214.9": "60B",
  "600018582149": "600B",
  "6000185821490": "6T",
  "70.0021679174": "70",
  "700.021679174": "700",
  "7000.21679174": "7K",
  "70002.1679174": "70K",
  "700021.679174": "700K",
  "7000216.79174": "7M",
  "70002167.9174": "70M",
  "700021679.174": "700M",
  "7000216791.74": "7B",
  "70002167917.4": "70B",
  "700021679174": "700B",
  "7000216791740": "7T",
  "80.0024776199": "80",
  "800.024776199": "800",
  "8000.24776199": "8K",
  "80002.4776199": "80K",
  "800024.776199": "800K",
  "8000247.76199": "8M",
  "80002477.6199": "80M",
  "800024776.199": "800M",
  "8000247761.99": "8B",
  "80002477619.9": "80B",
  "800024776199": "800B",
  "8000247761990": "8T",
  "90.0027873224": "90",
  "900.027873224": "900",
  "9000.27873224": "9K",
  "90002.7873224": "90K",
  "900027.873224": "900K",
  "9000278.73224": "9M",
  "90002787.3224": "90M",
  "900027873.224": "900M",
  "9000278732.24": "9B",
  "90002787322.4": "90B",
  "900027873224": "900B",
  "9000278732240": "9T",
}
`;
